# teonet

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  Build-debug.sh  Build-release.sh  ChangeLog  ChangeLog.html  ChangeLog.js  Doxyfile  INSTALL  Makefile.am  README  README.md  README_8md.html  Readme_8md.html  acinclude.m4  aminclude.am  annotated.html  annotated.js  annotated_dup.js  api_8md.html  app_2embedded_2jsmn_2README_8md.html  app_2teodb_8c.html  app_2teodb_8c.js  async__c_2src_2main_8c.html  async__c_2src_2main_8c.js  async__c_2src_2main_8cpp.html  async__c_2src_2main_8cpp.js  async__calls_8c.html  async__calls_8c.js  async__calls_8h.html  async__calls_8h.js  async__calls_8h_source.html  attributes_8h.html  attributes_8h.js  attributes_8h_source.html  autogen.sh  base64_8c.html  base64_8c.js  (+895 more)
.circleci/: README.MD  config.yml
app/: Makefile.am  teo_http.c  teo_http.h  teodb.c  teodsp.c  teogw.c  teoroom  teoroom.c  teoroom_0.0.2.c  teosend.c  teovpn  teovpn.c  teovpnstarter.c  teoweb.c  teoweb.html
app/embedded/mongoose/: mongoose.c  mongoose.h
app/embedded/mongoose/.deps/: mongoose.Po
app/modules/teo_auth/: teo_auth.c  teo_auth.h
app/modules/teo_web/: teo_web.c  teo_web.h  teo_web_conf.c  teo_web_conf.h  teo_ws.c  teo_ws.h
app/teo_web/: teo_web.c  teo_web.h  teo_web_conf.c  teo_web_conf.h  teo_ws.c  teo_ws.h
cmake/: Makefile.am  libteonet-config-version.cmake.in  libteonet-config.cmake.in
distr/: confuse-2.7-src-Makefile.patch
embedded/: Makefile.am
embedded/libteol0/: Makefile.am  teonet_l0_client.c  teonet_l0_client.h  teonet_l0_client.i  teonet_l0_client.make.sh
examples/: Makefile.am  teoack.c  teoackm.c  teocpp.cpp  teocpp_2.cpp  teocque.c  teocquecpp.cpp  teocquecpp_2.cpp  teodb_ex.c  teodb_ex_cpp.cpp  teodb_ex_cpp_2.cpp  teol0cli.c  teol0cli.py  teol0cli_async.py  teol0cli_n.c  teolarge.c  teomulti.c  teomulti_t.c  teosend.c  teosscr.c  teostream.c  teotcp.c  teoterm.c  teotru_load.c  teotru_load.sh  teotun.c
examples/fossa/: Makefile.am  teofossa.c
examples/go/: gosql.go  json.go  main.go  teogo.go  teogo_lib.c
examples/go/ccallbacks/: cfuncs.go  clibrary.c  goprog.go
examples/go/teogo/: cfuncs.go  teogo.go
examples/perl/: Makefile.PL  README  pipe.pl  teomojo-read.pl  teomojo.pl  teonet.i  teonet.pl  teonet.sh  teoperl
examples/perl-xs/Teonet/: Changes  MANIFEST  Makefile.PL  README  Teonet.xs
examples/perl-xs/Teonet/lib/: Teonet.pm
examples/perl-xs/Teonet/t/: Teonet.t
examples/perl/t/: teonet.t
misc/: RELEASE_BODY  RELEASE_TITLE  change_log_prepend.sh  make_remote_doc_upload.sh
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
po/: LINGUAS  POTFILES.in  ru.po
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+145 more)
sh/: Dockerfile  Dockerfile.old  Dockerfile_log  Makefile.am  build-arch.sh  build-centos.sh  build-gentoo.sh  build-opensuse.sh  build-ubuntu.sh  change_log_prepend.sh  f1.sh  filebeat_inst.sh  filebeat_install.sh  gitlab-ci.conf  libteonet_copy.sh  (+24 more)
src/: Makefile.am  commands_creator.c  commands_creator.h  crypt.c  crypt.h  daemon.c  daemon.h  ev_mgr.c  ev_mgr.h  hotkeys.c  hotkeys.h  libteonet.pc  libteonet.pc.in  modules.c  modules.h  net_arp.c  net_arp.h  net_com.c  net_com.h  net_core.c  net_core.h  net_multi.c  net_multi.h  net_recon.c  net_recon.h  net_split.c  net_split.h  net_tcp.c  net_tcp.h  net_tr-udp.c  net_tr-udp.h  net_tr-udp_.h  net_tr-udp_stat.c  net_tr-udp_stat.h  pidfile.c  pidfile.h  teonet  teonet.c  teonet.h  teonet.hpp  (+5 more)
src/config/: conf.c  conf.h  config.h  opt.c  opt.h  teonet.conf.default
src/modules/: async_calls.c  async_calls.h  cque.c  cque.h  l0-server.c  l0-server.h  log_reader.c  log_reader.h  logging_client.c  logging_client.h  logging_server.c  logging_server.h  metric.c  metric.h  net_cli.c  net_cli.h  net_tcp.c  net_tcp.h  net_term.c  net_term.h  net_tun.c  net_tun.h  pbl_kf.c  pbl_kf.h  stream.c  stream.h  subscribe.c  subscribe.h  tcp_proxy.c  tcp_proxy.h  teodb.c  teodb.h  teodb_com.c  teodb_com.h  vpn.c  vpn.h
src/not_in_use/: modules.c  modules.h
src/text-filter/: Makefile.am  Readme.md  configure.ac  filter.l  filter.y  grammar-filter.c  grammar-filter.h  grammar-filter.y  lexer-filter.c  lexer-filter.l  main.c  text-filter-example.c  text-filter.c  text-filter.h
src/utils/: attributes.h  base64.c  rlutil.h  string_arr.c  string_arr.h  teo_memory.c  teo_memory.h  utils.c  utils.h
tests/: Makefile.am  http-post.c  pipe_ping  pipe_ping.c  pipe_ping.sh  rt_udp.c  teolarge.c  teonet_tst.c  test_cque.c  test_crypt.c  test_filter.c  test_net_tr-udp.c  test_pbl_kf.c  test_subscribe.c  test_tcp_proxy.c  test_teodb.c  test_teonet.c  test_tr-udp.c
tests/fossa/: teofossa.c
tests/load_test/async_c/: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
tests/load_test/async_c/nbproject/: configurations.xml  project.xml
tests/load_test/async_c/po/: POTFILES.in
tests/load_test/async_c/src/: Makefile.am  main.c  main.cpp  utils.h
tests/load_test/teoloadsi/: .gitignore  AUTHORS  Doxyfile  Makefile.am  README.md  autogen.sh  configure.ac  teoloadsi
tests/load_test/teoloadsi-js/: LICENSE  README.md  bower.json  package-lock.json  package.json
tests/load_test/teoloadsi-js/app/: index.js
tests/load_test/teoloadsi-js/docker/: Dockerfile
tests/load_test/teoloadsi-js/nbproject/: project.properties  project.xml
tests/load_test/teoloadsi/nbproject/: configurations.xml  project.xml
tests/load_test/teoloadsi/src/: Makefile.am  main.c  main.cpp
tests/post/: http-post.c  post-callback.c
(+39 files in other folders)
